--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="enter_valid_password">Hasło powinno mieć między 4 a 15 znaków alfanumerycznych</string>
     <string name="failed_login">Błąd podczas logowania</string>
     <string name="authorizing_progress">Trwa autoryzacja...</string>
+    <string name="drawer_open">open</string>
+    <string name="drawer_close">close</string>
 </resources>
